--- a/css/sweettweet.css
+++ b/css/sweettweet.css
@@ -4,3 +4,34 @@ header img {
 	vertical-align: middle;
 	margin-right: 5px;
 }
+
+#filter-popup {
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  top: 70px;
+  right: 20px;
+  width: 20%;
+  display: none;
+  border: solid 10px rgba(0, 0, 0, 0.7);
+  border-radius: 5px;
+
+}
+
+/* Overrided default style to avoid the filter overflow */
+#filter-popup .ui-listview-filter {
+  border-width: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+.arrow {
+  border-color:  transparent transparent rgba(0,0,0,0.7) transparent;
+  border-style: solid;
+  border-width: 20px;
+  height:0;
+  width:0;
+  position:absolute;
+  top:-50px;
+  right:10px;
+}
