--- a/css/sweettweet.css
+++ b/css/sweettweet.css
@@ -1,8 +1,8 @@
 header img {
-	width: 18px;
-	height: 18px;
-	vertical-align: middle;
-	margin-right: 5px;
+  width: 18px;
+  height: 18px;
+  vertical-align: middle;
+  margin-right: 5px;
 }
 
 #filter-popup {
@@ -26,12 +26,12 @@ header img {
 }
 
 .arrow {
-  border-color:  transparent transparent rgba(0,0,0,0.7) transparent;
-  border-style: solid;
-  border-width: 20px;
+  position: absolute;
+  border-bottom: solid 20px rgba(0, 0, 0, 0.7);
+  border-left: solid 20px transparent;
+  border-right: solid 20px transparent;
   height:0;
   width:0;
-  position:absolute;
-  top:-50px;
-  right:10px;
+  top: -30px;
+  right: 5%;
 }
